<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_10sdp"
    tools:context=".bottomsheet.ModalBottomSheetDialogFragment">

    <ImageView
        android:id="@+id/placeImage"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/placeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_9sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/place_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/placeImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="fill"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeImage" />

    <TextView
        android:id="@+id/distanceFromUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/distance_in_between"
        android:textColor="@color/black_75"
        app:layout_constraintEnd_toEndOf="@+id/placeDetail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/placeDetail"
        app:layout_constraintTop_toBottomOf="@+id/placeDetail" />

    <TextView
        android:id="@+id/peopleCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/people_count"
        app:layout_constraintEnd_toEndOf="@+id/checkIn"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/checkIn"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/checkIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/base_color"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/check_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peopleCount" />

</androidx.constraintlayout.widget.ConstraintLayout>