<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_445sdp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_27sdp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/check_in_question"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/near_places"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/placeDetailRv"
        android:layout_width="0dp"
        android:layout_height="@dimen/_270sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:listitem="@layout/place_list_items" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/at_venue"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/placeDetailRv"
        app:layout_constraintStart_toStartOf="@+id/placeDetailRv"
        app:layout_constraintTop_toBottomOf="@+id/placeDetailRv" />

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/custom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@id/textView21" />
</androidx.constraintlayout.widget.ConstraintLayout>