<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_445sdp">

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_27sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_23ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dugout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/placeName">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userProfileRv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/user_profile_list_items" />

        <TextView
            android:id="@+id/checkedInText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/no_checked_in_user"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataContainer">

        <Button
            android:id="@+id/check_into_place"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/base_color"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="@string/check_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/checked_into_place"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/accept_button"
            android:fontFamily="@font/inter_semibold"
            android:letterSpacing="0"
            android:text="@string/checked_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer">

        <TextView
            android:id="@+id/peopleInPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/people_count"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tap_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tap_profile"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/custom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textContainer"
        app:layout_constraintStart_toStartOf="@+id/textContainer"
        app:layout_constraintTop_toBottomOf="@+id/textContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>
